--- a/Loon/Loon.conf
+++ b/Loon/Loon.conf
@@ -1,5 +1,5 @@
 # 适用于 Loon 2.1.19 + 版本的配置文件
-# 2022年06月08日 00:30 UTC/GMT +8
+# 2022年06月11日 00:25 UTC/GMT +8
 
 [General]
 # IPv6 支持
@@ -207,7 +207,7 @@ https://raw.githubusercontent.com/GeQ1an/Rules/master/Loon/Rewrite/Rewrite.plugi
 [MITM]
 # 请在正式使用前将其他已信任证书的 P12 及密码填入下方，并删掉 ca-p12 和 ca-passphrase 前的井号
 # 或者前往设置界面生成、安装并信任新证书
-hostname = www.bilibili.com, api.bilibili.com, app.bilibili.com, api.live.bilibili.com, api.m.jd.com, trade-acs.m.taobao.com, ios.prod.ftl.netflix.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com
+hostname = api.m.jd.com, trade-acs.m.taobao.com, ios.prod.ftl.netflix.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com
 enable = true
 skip-server-cert-verify = true
 #ca-p12 =
