--- a/QuantumultX/Sample/DlerCloud/Head.conf
+++ b/QuantumultX/Sample/DlerCloud/Head.conf
@@ -3,6 +3,7 @@ excluded_routes = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, 17.0
 
 network_check_url = http://www.gstatic.com/generate_204
 server_check_url = http://www.gstatic.cn/generate_204
+server_check_timeout = 3000
 
 geo_location_checker = http://ip-api.com/json/?lang=zh-CN, https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/IP_API.js
 
@@ -16,27 +17,28 @@ server = 182.254.116.116
 # 其中 CMedia 策略组为中国媒体，GMedia 为国际媒体，Outside 为境外链接，Mainland 为大陆链接，Others 为最终规则
 # 已更换彩色策略组图标以适配 Quantumult X 新特性
 ## 需要手动长按「策略组名称」——点击「背景」——点击右「上角+号」——屏幕中间位置「不透明度调整为 0%」，右上角 X 关闭此界面，再选择新添加的背景 (在下方) 即可使用透明背景
-static = AdBlock, reject, direct, img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Advertising.png
-static = Outside, Hong Kong, Taiwan, Japan, Korea, United States, Singapore, direct, img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Global.png
-static = Mainland, direct, Outside, img-url=  https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Domestic.png
-static = Apple, direct, Outside, Hong Kong, Japan, United States, img-url=  https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
-static = CMedia, Mainland, Outside, direct, img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/StreamingCN.png
-static = GMedia, Outside, Hong Kong, Taiwan, Japan, Korea, United States, Singapore, direct, img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Streaming.png
-static = Netflix, GMedia, Singapore, Hong Kong, Taiwan, United States, img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Netflix.png
-static = Disney+, GMedia, Singapore, Hong Kong, Taiwan, United States, img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Disney.png
-static = Spotify, GMedia, Singapore, Hong Kong, Taiwan, United States, img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Spotify.png
-static = YouTube, GMedia, Singapore, Hong Kong, Taiwan, United States, img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/YouTube.png
-static = Douyin, Outside, direct, img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/TikTok.png
-static = Telegram, Outside, direct, img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Telegram_X.png
-static = Microsoft, direct, Outside, img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Microsoft.png
-static = PayPal, Outside, direct, img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/PayPal.png
-static = Speedtest, direct, Hong Kong, Taiwan, Singapore, Japan, Korea, United States, img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Speedtest.png
-static = Others, Outside, direct, img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Final.png
+static = AdBlock, reject, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Advertising.png
+static = Outside, Hong Kong, Taiwan, Japan, Korea, United States, Singapore, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Global.png
+static = Mainland, direct, Outside, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Domestic.png
+static = Apple, direct, Outside, Hong Kong, Japan, United States, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
+static = CMedia, Mainland, Outside, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/StreamingCN.png
+static = GMedia, Outside, Hong Kong, Taiwan, Japan, Korea, United States, Singapore, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Streaming.png
+static = Netflix, GMedia, Singapore, Hong Kong, Taiwan, United States, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Netflix.png
+static = Disney+, GMedia, Singapore, Hong Kong, Taiwan, United States, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Disney.png
+static = Spotify, GMedia, Singapore, Hong Kong, Taiwan, United States, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Spotify.png
+static = YouTube, GMedia, Singapore, Hong Kong, Taiwan, United States, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/YouTube.png
+static = Telegram, Outside, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Telegram_X.png
+static = Crypto, Outside, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Cryptocurrency_3.png
+static = Douyin, Outside, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/TikTok.png
+static = Microsoft, direct, Outside, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Microsoft.png
+static = PayPal, Outside, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/PayPal.png
+static = Speedtest, direct, Hong Kong, Taiwan, Singapore, Japan, Korea, United States, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Speedtest.png
+static = Others, Outside, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Final.png
 
-available = Hong Kong, resource-tag-regex=Dler Cloud - HK, img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Hong_Kong.png
-available = Singapore, resource-tag-regex=Dler Cloud - SG, img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Singapore.png
-available = Taiwan, resource-tag-regex=Dler Cloud - TW,  img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Taiwan.png
-available = United States, resource-tag-regex=Dler Cloud - US, img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/United_States.png
-available = Japan, resource-tag-regex=Dler Cloud - JP, img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Japan.png
-available = Korea, resource-tag-regex=Dler Cloud - KR, img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Korea.png
+available = Hong Kong, resource-tag-regex=Dler Cloud - HK, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Hong_Kong.png
+available = Singapore, resource-tag-regex=Dler Cloud - SG, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Singapore.png
+available = Taiwan, resource-tag-regex=Dler Cloud - TW,  img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Taiwan.png
+available = United States, resource-tag-regex=Dler Cloud - US, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/United_States.png
+available = Japan, resource-tag-regex=Dler Cloud - JP, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Japan.png
+available = Korea, resource-tag-regex=Dler Cloud - KR, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Korea.png
 static = Other, resource-tag-regex=Dler Cloud - OT, img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Available.png
