--- a/QuantumultX/QuantumultX.conf
+++ b/QuantumultX/QuantumultX.conf
@@ -1,6 +1,6 @@
 # 该文件基于 Quantumult X 1.0.29 正式版制作
 #
-# 2022年06月08日 00:30 UTC/GMT +8
+# 2022年08月16日 01:30 UTC/GMT +8
 #
 # Quantumult 使用 HTTP HEAD 方法对测试网址 server_check_url 进行网页响应性测试（测试结果为通过该节点访问此网页获得 HTTP 响应所需要的时间），来确认节点的可用性
 # Quantumult 界面中的延迟测试方式均为网页响应性测试，显示的最终延迟均为通过对应节点访问测试网页获得 HTTP 响应所需要时间
@@ -8,31 +8,33 @@
 
 [general]
 # 网络测试链接
-network_check_url=http://bing.com
+network_check_url = http://bing.com
 # 服务器测试链接
-server_check_url=http://www.gstatic.com/generate_204
+server_check_url = http://www.gstatic.com/generate_204
 # 服务器测试超时时间 (毫秒)
-server_check_timeout=3000
+server_check_timeout = 3000
 # 如需识别节点地区为中文和显示国旗，请取消下面 geo_location_checker 前的 ; 备注
-;geo_location_checker=http://ip-api.com/json/?lang=zh-CN, https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/IP_API.js
-# 指定 WiFi 直连
-## 下方写法表示移动蜂窝网络和一般 WiFi 为分流模式 (filter), 名为 Stick 的 WiFi 下为全部直连模式，名为 Stick-5G 的 WiFi 下为全部代理模式，名为 Stick-8G 的 WiFi 下为分流模式
-running_mode_trigger=filter, filter, Stick:all_direct, Stick-5G:all_proxy, Stick-8G:filter
-;excluded_routes= 192.168.0.0/16, 172.16.0.0/12, 127.0.0.0/8, 100.64.0.0/10, 17.0.0.0/8, 10.0.0.0/8
-;icmp_auto_reply=true
+;geo_location_checker = http://ip-api.com/json/?lang=zh-CN, https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/IP_API.js
+# 指定 WiFi SSID 下的运行模式
+## 下方写法表示移动蜂窝网络和一般 WiFi 为分流模式 (filter), 名为 Stick 的 WiFi 下为直连模式，名为 Stick-5G 的 WiFi 下为代理模式
+running_mode_trigger = filter, filter, Stick:all_direct, Stick-5G:all_proxy
+# 不使用 fakeip 映射，可防止检测到使用代理
+dns_exclusion_list = *.lan, cable.auth.com, *.msftconnecttest.com, *.msftncsi.com, network-test.debian.org, detectportal.firefox.com, resolver1.opendns.com, *.srv.nintendo.net, *.stun.playstation.net, xbox.*.microsoft.com, *.xboxlive.com, stun.*, localhost.*.qq.com, *.logon.battlenet.com.cn, *.logon.battle.net, *.blzstatic.cn, *.cmpassport.com, id6.me, open.e.189.cn, mdn.open.wo.cn, auth.wosms.cn, *.jegotrip.com.cn, *.icitymobile.mobi, *.pingan.com.cn, *.cmbchina.com, *?miwifi.com, pool.ntp.org, *.pool.ntp.org, ntp.*.com, time.*.com, ntp?.*.com, time?.*.com, time.*.gov, time.*.edu.cn, *.ntp.org.cn, time.*.apple.com, PDC._msDCS.*.*, DC._msDCS.*.*, GC._msDCS.*.*
+;excluded_routes = 192.168.0.0/16, 172.16.0.0/12, 127.0.0.0/8, 100.64.0.0/10, 17.0.0.0/8, 10.0.0.0/8
+;icmp_auto_reply = true
 # 资源解析器
-resource_parser_url=https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/resource-parser.js
+resource_parser_url = https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/resource-parser.js
 
 [dns]
 # 如果只在中国大陆境内使用，推荐删除 1.0.0.1 和 8.8.8.8 两个 DNS
-# 可以视情况取消 no-system 和 no-ipv6 前的注释
-;no-system
-;no-ipv6
-server=1.0.0.1
-server=8.8.8.8
-server=114.114.114.114
-server=119.29.29.29
-server=223.5.5.5
+# 如果无法正常使用已经通过软路由等已经代理的 WiFi 网络，在 doh-server 最后方加入 ,excluded_ssids=你的WiFi名称
+prefer-doh3
+no-system
+server = 1.0.0.1
+server = 8.8.8.8
+server = 223.5.5.5
+server = 119.29.29.29
+doh-server = https://223.5.5.5/dns-query, https://223.6.6.6/dns-query
 
 [policy]
 # 其中 CMedia 策略组为中国媒体，GMedia 为国际媒体，Outside 为境外链接，Mainland 为大陆链接，Others 为最终规则
