--- a/Loon/Loon.conf
+++ b/Loon/Loon.conf
@@ -1,14 +1,17 @@
-# 适用于 Loon 2.1.19 + 版本的配置文件
-# 2022年06月11日 00:25 UTC/GMT +8
+# 适用于 Loon 2.1.20 + 版本的配置文件
+# 2022年08月16日 01:30 UTC/GMT +8
 
 [General]
 # IPv6 支持
-ipv6 = false
+ipv6 = true
 # 跳过某个域名或者IP段
 skip-proxy = 192.168.0.0/16,172.16.0.0/12,127.0.0.0/8,100.64.0.0/10,17.0.0.0/8,10.0.0.0/8,localhost,*.local,e.crashlynatics.com
 bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,192.168.0.0/16,198.18.0.0/15,198.51.100.0/24,203.0.113.0/24,224.0.0.0/4,255.255.255.255/32
 # DNS 服务器，如果只在中国大陆境内使用，推荐删除 1.0.0.1 和 8.8.8.8
-dns-server = system,1.0.0.1,8.8.8.8,114.114.114.114,119.29.29.29,223.5.5.5
+## 若你的 Loon 版本低于 2.2.0(427) 请使用 # 暂时注释下方 doh-server 和 doh3-server
+dns-server = 1.0.0.1,8.8.8.8,119.29.29.29,223.5.5.5
+doh-server = https://dns.alidns.com/dns-query
+doh3-server = https://223.5.5.5/dns-query,https://223.6.6.6/dns-query
 # Wi-Fi 访问
 allow-udp-proxy = false
 allow-wifi-access = false
@@ -17,8 +20,13 @@ wifi-access-socket5-port = 7221
 # 网络测试 URL
 proxy-test-url = http://www.gstatic.com/generate_204
 test-timeout = 5
+# 指定 WiFi SSID 运行模式
+## 下方写法表示一般 WiFi 和移动蜂窝网络下为自动分流模式 (rule), 名为 Stick 的 WiFi 下为全局直连模式，名为 Stick-5G 的 WiFi 下为全局代理模式
+ssid-trigger = "default":RULE, "cellular":RULE, "Stick":DIRECT, "Stick-5G":PROXY
+# 使用真实 IP，可防止检测到使用代理
+real-ip = *.lan, cable.auth.com, *.msftconnecttest.com, *.msftncsi.com, network-test.debian.org, detectportal.firefox.com, resolver1.opendns.com, *.srv.nintendo.net, *.stun.playstation.net, xbox.*.microsoft.com, *.xboxlive.com, stun.*, localhost.*.qq.com, *.logon.battlenet.com.cn, *.logon.battle.net, *.blzstatic.cn, *.cmpassport.com, id6.me, open.e.189.cn, mdn.open.wo.cn, auth.wosms.cn, *.jegotrip.com.cn, *.icitymobile.mobi, *.pingan.com.cn, *.cmbchina.com, *?miwifi.com, pool.ntp.org, *.pool.ntp.org, ntp.*.com, time.*.com, ntp?.*.com, time?.*.com, time.*.gov, time.*.edu.cn, *.ntp.org.cn, time.*.apple.com, PDC._msDCS.*.*, DC._msDCS.*.*, GC._msDCS.*.*
 # 解析器
-resource-parser = https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/scripts/sub-store-parser.js
+resource-parser = https://raw.githubusercontent.com/peng-ym/sub-store/master/backend/dist/sub-store-parser.loon.min.js
 
 [Proxy]
 # 内置 DIRECT、REJECT 策略
@@ -46,22 +54,22 @@ Dler Cloud - US = NameRegex,Dler Cloud,FilterKey = .*(美国|United States|US|us
 [Proxy Group]
 # 默认注释网易云音乐 / Netflix / Disney Plus / Spotify / YouTube / Telegram / Microsoft / TikTok / PayPal 规则及策略，如需使用请取消 # 备注
 广告拦截 = select,拦截,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Advertising.png
-代理 = select,自动选择,香港节点,台湾节点,新加坡节点,日本节点,韩国节点,美国节点,Dler Cloud,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Global.png
-大陆网络 = select,直连,代理,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Domestic.png
-苹果服务 = select,直连,代理,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
+国际代理 = select,自动选择,香港节点,台湾节点,新加坡节点,日本节点,韩国节点,美国节点,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Global.png
+大陆网络 = select,直连,国际代理,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Domestic.png
+苹果服务 = select,直连,国际代理,美国节点,香港节点,日本节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
 国内媒体 = select,大陆网络,香港节点,台湾节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/StreamingCN.png
-国际媒体 = select,代理,直连,香港节点,台湾节点,新加坡节点,日本节点,韩国节点,美国节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Streaming.png
+国际媒体 = select,国际代理,香港节点,台湾节点,新加坡节点,日本节点,韩国节点,美国节点,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Streaming.png
 #网易云音乐 = select,国内媒体,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Netease_Music.png
 #网飞视频 = select,国际媒体,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Netflix.png
 #迪士尼+ = select,国际媒体,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Disney.png
 #声田音乐 = select,国际媒体,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Spotify.png
 #油管视频 = select,国际媒体,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/YouTube.png
-#电报服务 = select,代理,新加坡节点,美国节点,香港节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Telegram_X.png
-#微软服务 = select,直连,代理,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Microsoft.png
-#国际抖音 = select,代理,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/TikTok.png
-#贝宝服务 = select,代理,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/PayPal.png
-网速测试 = select,代理,直连,香港节点,台湾节点,新加坡节点,日本节点,韩国节点,美国节点,Dler Cloud,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Speedtest.png
-其他 = select,代理,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Final.png
+#电报服务 = select,国际代理,新加坡节点,美国节点,香港节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Telegram_X.png
+#微软服务 = select,直连,国际代理,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Microsoft.png
+#国际抖音 = select,国际代理,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/TikTok.png
+#贝宝服务 = select,国际代理,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/PayPal.png
+网速测试 = select,直连,国际代理,香港节点,台湾节点,新加坡节点,日本节点,韩国节点,美国节点,img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Speedtest.png
+其他 = select,国际代理,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Final.png
 
 # 注意下方的 Dler Cloud 名称，如有不使用的国家/地区节点策略组，请在上方规则策略组中一并删除相关节点策略组
 自动选择 = fallback,Dler Cloud - HK,url = http://www.gstatic.com/generate_204,interval = 300,max-timeout = 3000,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Round_Robin.png
@@ -115,7 +123,7 @@ https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Me
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/Tencent%20Video.list, policy=国内媒体, tag=Tencent Video, enabled=true
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/Youku.list, policy=国内媒体, tag=Youku, enabled=true
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/WeTV.list, policy=国内媒体, tag=WeTV, enabled=true
-# 国际媒体分组，如需为某个规则列表单独设置策略，请直接修改最后的策略名称
+# 国际媒体分组，如需为某个规则列表单独设置策略，请直接修改 policy= 后的策略名称
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/Netflix.list, policy=国际媒体, tag=Netflix, enabled=true
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/Disney%20Plus.list, policy=国际媒体, tag=Disney Plus, enabled=true
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/Spotify.list, policy=国际媒体, tag=Spotify, enabled=true
@@ -158,12 +166,11 @@ https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Ap
 #https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/PayPal.list, policy=贝宝服务, tag=PayPal, enabled=true
 # 必须规则列表
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Speedtest.list, policy=网速测试, tag=Speedtest, enabled=true
-https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Proxy.list, policy=代理, tag=Proxy, enabled=true
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Proxy.list, policy=国际代理, tag=Proxy, enabled=true
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Domestic.list, policy=大陆网络, tag=Domestic, enabled=true
 
 [Rewrite]
 # 重写规则
-enable = true
 
 [Host]
 # 可以指定以下四种模式：
@@ -177,8 +184,7 @@ enable = true
 ## ssid:Stick = server:system
 
 [Script]
-enable = true
-
+# 脚本
 # Display commodity historical price
 # > JD - api.m.jd.com
 http-response ^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig) requires-body=1,script-path=https://raw.githubusercontent.com/zwf234/rules/master/js/jd_price.js
