--- a/QuantumultX/QuantumultX.conf
+++ b/QuantumultX/QuantumultX.conf
@@ -49,6 +49,7 @@ static=GMedia, Outside, Hong Kong, Taiwan, Japan, Korea, United States, Singapor
 ;static=Disney+, GMedia, Singapore, Hong Kong, Taiwan, United States, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Disney.png
 ;static=Spotify, GMedia, Singapore, Hong Kong, Taiwan, United States, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Spotify.png
 ;static=YouTube, GMedia, Singapore, Hong Kong, Taiwan, United States, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/YouTube.png
+;static=Apple Music, United States, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Apple_Music.png
 ;static=Netease Music, CMedia, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Netease_Music.png
 ;static=TikTok, Outside, Japan, Korea, Taiwan, United States, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/TikTok.png
 ;static=Telegram, Outside, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Telegram_X.png
@@ -88,6 +89,7 @@ https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Speedte
 https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Outside.list, tag=Outside (Stick Rules), update-interval=43200, enabled=true
 https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Mainland.list, tag=Mainland (Stick Rules), update-interval=43200, enabled=true
 https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/LAN.list, tag=LAN (Stick Rules), update-interval=43200, enabled=true
+https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Optional/Apple%20music.list,tag=Apple Music (Stick Rules), update-interval=43200, enabled=true
 
 [rewrite_remote]
 # 默认未启用 TikTok 解锁订阅，如需使用请跳转到 https://github.com/Semporia/TikTok-Unlock/blob/master/README.md 查看详细使用说明
