--- a/Loon/Loon.conf
+++ b/Loon/Loon.conf
@@ -1,5 +1,5 @@
-# 适用于 Loon 2.1.20 + 版本的配置文件
-# 2022年08月16日 01:30 UTC/GMT +8
+# 适用于 Loon 2.2.0 + 版本的配置文件
+# 2022年08月30日 22:00 UTC/GMT +8
 
 [General]
 # IPv6 支持
@@ -7,8 +7,7 @@ ipv6 = true
 # 跳过某个域名或者IP段
 skip-proxy = 192.168.0.0/16,172.16.0.0/12,127.0.0.0/8,100.64.0.0/10,17.0.0.0/8,10.0.0.0/8,localhost,*.local,e.crashlynatics.com
 bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,192.168.0.0/16,198.18.0.0/15,198.51.100.0/24,203.0.113.0/24,224.0.0.0/4,255.255.255.255/32
-# DNS 服务器，如果只在中国大陆境内使用，推荐删除 1.0.0.1 和 8.8.8.8
-## 若你的 Loon 版本低于 2.2.0(427) 请使用 # 暂时注释下方 doh-server 和 doh3-server
+# DNS 服务器，如果只在中国大陆境内使用，推荐删除 1.0.0.1 和 8.8.8.8 两个 DNS
 dns-server = 1.0.0.1,8.8.8.8,119.29.29.29,223.5.5.5
 doh-server = https://dns.alidns.com/dns-query
 doh3-server = https://223.5.5.5/dns-query,https://223.6.6.6/dns-query
@@ -21,9 +20,9 @@ wifi-access-socket5-port = 7221
 proxy-test-url = http://www.gstatic.com/generate_204
 test-timeout = 5
 # 指定 WiFi SSID 运行模式
-## 下方写法表示一般 WiFi 和移动蜂窝网络下为自动分流模式 (rule), 名为 Stick 的 WiFi 下为全局直连模式，名为 Stick-5G 的 WiFi 下为全局代理模式
+## 下方写法表示一般 WiFi 和移动蜂窝网络下为自动分流模式 (rule), 名为 Stick 的 WiFi 下为直连模式，名为 Stick-5G 的 WiFi 下为代理模式
 ssid-trigger = "default":RULE, "cellular":RULE, "Stick":DIRECT, "Stick-5G":PROXY
-# 使用真实 IP，可防止检测到使用代理
+# 使用真实 IP，可一定程度防止检测到使用代理
 real-ip = *.lan, cable.auth.com, *.msftconnecttest.com, *.msftncsi.com, network-test.debian.org, detectportal.firefox.com, resolver1.opendns.com, *.srv.nintendo.net, *.stun.playstation.net, xbox.*.microsoft.com, *.xboxlive.com, stun.*, localhost.*.qq.com, *.logon.battlenet.com.cn, *.logon.battle.net, *.blzstatic.cn, *.cmpassport.com, id6.me, open.e.189.cn, mdn.open.wo.cn, auth.wosms.cn, *.jegotrip.com.cn, *.icitymobile.mobi, *.pingan.com.cn, *.cmbchina.com, *?miwifi.com, pool.ntp.org, *.pool.ntp.org, ntp.*.com, time.*.com, ntp?.*.com, time?.*.com, time.*.gov, time.*.edu.cn, *.ntp.org.cn, time.*.apple.com, PDC._msDCS.*.*, DC._msDCS.*.*, GC._msDCS.*.*
 # 解析器
 resource-parser = https://raw.githubusercontent.com/peng-ym/sub-store/master/backend/dist/sub-store-parser.loon.min.js
@@ -52,7 +51,7 @@ Dler Cloud - KR = NameRegex,Dler Cloud,FilterKey = .*(韩国|Korea|KR|kr)
 Dler Cloud - US = NameRegex,Dler Cloud,FilterKey = .*(美国|United States|US|us)
 
 [Proxy Group]
-# 默认注释网易云音乐 / Netflix / Disney Plus / Spotify / YouTube / Telegram / Microsoft / TikTok / PayPal 规则及策略，如需使用请取消 # 备注
+# 默认注释网易云音乐 / Netflix / Disney Plus / Spotify / YouTube / Microsoft / Telegram / PayPal / TikTok 规则及策略，如需使用请取消 # 备注，并修改 [Remote Rule] 位置策略名与之对应，或取消对应规则前的 # 备注
 广告拦截 = select,拦截,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Advertising.png
 国际代理 = select,自动选择,香港节点,台湾节点,新加坡节点,日本节点,韩国节点,美国节点,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Global.png
 大陆网络 = select,直连,国际代理,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Domestic.png
@@ -64,10 +63,10 @@ Dler Cloud - US = NameRegex,Dler Cloud,FilterKey = .*(美国|United States|US|us
 #迪士尼+ = select,国际媒体,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Disney.png
 #声田音乐 = select,国际媒体,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Spotify.png
 #油管视频 = select,国际媒体,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/YouTube.png
-#电报服务 = select,国际代理,新加坡节点,美国节点,香港节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Telegram_X.png
 #微软服务 = select,直连,国际代理,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Microsoft.png
-#国际抖音 = select,国际代理,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/TikTok.png
+#电报服务 = select,国际代理,新加坡节点,美国节点,香港节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Telegram_X.png
 #贝宝服务 = select,国际代理,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/PayPal.png
+#国际抖音 = select,国际代理,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/TikTok.png
 网速测试 = select,直连,国际代理,香港节点,台湾节点,新加坡节点,日本节点,韩国节点,美国节点,img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Speedtest.png
 其他 = select,国际代理,直连,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Final.png
 
@@ -105,7 +104,6 @@ IP-CIDR,127.0.0.0/8,DIRECT,no-resolve
 IP-CIDR,172.16.0.0/12,DIRECT,no-resolve
 IP-CIDR,192.168.0.0/16,DIRECT,no-resolve
 
-GEOIP,CN,大陆网络
 FINAL,其他
 
 [Remote Rule]
@@ -159,15 +157,16 @@ https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Me
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/ViuTV.list, policy=国际媒体, tag=ViuTV, enabled=true
 # 苹果服务规则列表
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Apple.list, policy=苹果服务, tag=Apple, enabled=true
-# 电报、微软及 TikTok / PayPal 可选规则列表
-#https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Telegram.list, policy=电报服务, tag=Telegram, enabled=true
-#https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Microsoft.list, policy=微软服务, tag=Microsoft, enabled=true
+# 微软、电报、贝宝及 TikTok可选规则列表，如需为某个规则列表单独设置策略，请直接修改 policy= 后的策略名称与上方策略组名称保持一致
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Microsoft.list, policy=大陆网络, tag=Microsoft, enabled=true
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Telegram.list, policy=国际代理, tag=Telegram, enabled=true
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/PayPal.list, policy=国际代理, tag=Telegram, enabled=true
 #https://raw.githubusercontent.com/Semporia/Loon/master/Rule/TikTok.list, policy=国际抖音, tag=TikTok, enabled=true
-#https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/PayPal.list, policy=贝宝服务, tag=PayPal, enabled=true
 # 必须规则列表
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Speedtest.list, policy=网速测试, tag=Speedtest, enabled=true
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Proxy.list, policy=国际代理, tag=Proxy, enabled=true
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Domestic.list, policy=大陆网络, tag=Domestic, enabled=true
+https://raw.githubusercontent.com/VirgilClyne/VirgilClyne/main/modules/ASN/ASN.China.list, policy=大陆网络, tag=ASN.China, enabled=true
 
 [Rewrite]
 # 重写规则
