--- a/QuantumultX/QuantumultX.conf
+++ b/QuantumultX/QuantumultX.conf
@@ -1,6 +1,6 @@
-# 该文件基于 Quantumult X 1.0.29 正式版制作
+# 该文件基于 Quantumult X 1.0.32 正式版制作
 #
-# 2022年08月16日 01:30 UTC/GMT +8
+# 2022年08月30日 22:00 UTC/GMT +8
 #
 # Quantumult 使用 HTTP HEAD 方法对测试网址 server_check_url 进行网页响应性测试（测试结果为通过该节点访问此网页获得 HTTP 响应所需要的时间），来确认节点的可用性
 # Quantumult 界面中的延迟测试方式均为网页响应性测试，显示的最终延迟均为通过对应节点访问测试网页获得 HTTP 响应所需要时间
@@ -18,7 +18,7 @@ server_check_timeout = 3000
 # 指定 WiFi SSID 下的运行模式
 ## 下方写法表示移动蜂窝网络和一般 WiFi 为分流模式 (filter), 名为 Stick 的 WiFi 下为直连模式，名为 Stick-5G 的 WiFi 下为代理模式
 running_mode_trigger = filter, filter, Stick:all_direct, Stick-5G:all_proxy
-# 不使用 fakeip 映射，可防止检测到使用代理
+# 不使用 fakeip 映射，可一定程度防止检测到使用代理
 dns_exclusion_list = *.lan, cable.auth.com, *.msftconnecttest.com, *.msftncsi.com, network-test.debian.org, detectportal.firefox.com, resolver1.opendns.com, *.srv.nintendo.net, *.stun.playstation.net, xbox.*.microsoft.com, *.xboxlive.com, stun.*, localhost.*.qq.com, *.logon.battlenet.com.cn, *.logon.battle.net, *.blzstatic.cn, *.cmpassport.com, id6.me, open.e.189.cn, mdn.open.wo.cn, auth.wosms.cn, *.jegotrip.com.cn, *.icitymobile.mobi, *.pingan.com.cn, *.cmbchina.com, *?miwifi.com, pool.ntp.org, *.pool.ntp.org, ntp.*.com, time.*.com, ntp?.*.com, time?.*.com, time.*.gov, time.*.edu.cn, *.ntp.org.cn, time.*.apple.com, PDC._msDCS.*.*, DC._msDCS.*.*, GC._msDCS.*.*
 ;excluded_routes = 192.168.0.0/16, 172.16.0.0/12, 127.0.0.0/8, 100.64.0.0/10, 17.0.0.0/8, 10.0.0.0/8
 ;icmp_auto_reply = true
@@ -45,11 +45,11 @@ static=Mainland, direct, Outside, img-url=https://raw.githubusercontent.com/Kool
 static=Apple, direct, Outside, Hong Kong, United States, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
 static=CMedia, Mainland, Outside, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/StreamingCN.png
 static=GMedia, Outside, Hong Kong, Taiwan, Japan, Korea, United States, Singapore, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Streaming.png
-;static=Netflix, GMedia, Singapore, Hong Kong, Taiwan, United States, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Netflix.png
+;static=Apple Music, GMedia, United States, Hong Kong, Japan, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Apple_Music.png
 ;static=Disney+, GMedia, Singapore, Hong Kong, Taiwan, United States, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Disney.png
+;static=Netflix, GMedia, Singapore, Hong Kong, Taiwan, United States, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Netflix.png
 ;static=Spotify, GMedia, Singapore, Hong Kong, Taiwan, United States, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Spotify.png
 ;static=YouTube, GMedia, Singapore, Hong Kong, Taiwan, United States, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/YouTube.png
-;static=Apple Music, United States, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Apple_Music.png
 ;static=Netease Music, CMedia, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Netease_Music.png
 ;static=TikTok, Outside, Japan, Korea, Taiwan, United States, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/TikTok.png
 ;static=Telegram, Outside, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Telegram_X.png
@@ -70,13 +70,14 @@ available=Korea, resource-tag-regex=我的订阅, server-tag-regex=韩国|Korea|
 订阅链接, tag=我的订阅, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/CrossWall.png, update-interval=43200, opt-parser=true, enabled=true
 
 [filter_remote]
-# 默认不启用网易云音乐（包含在 CMedia 内）、Netflix/Disney Plus/Spotify/YouTube（包含在 GMedia 内）、TikTok/Telegram/PayPal（包含在 Outside 内）、微软（包含在 Mainland 内）规则，如需使用请修改 false 为 true，对于完全不需要的规则，删除即可
+# 默认不启用网易云音乐（包含在 CMedia 内）、Apple Music/Netflix/Disney Plus/Spotify/YouTube（包含在 GMedia 内）、TikTok/Telegram/PayPal（包含在 Outside 内）、微软（包含在 Mainland 内）规则，如需使用请修改 false 为 true，对于完全不需要的规则，删除即可
 https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Special.list, tag=Special (Stick Rules), update-interval=43200, enabled=true
 https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/AdBlock.list, tag=AdBlock (Stick Rules), update-interval=43200, enabled=true
 https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Optional/Netease%20Music.list, tag=Netease Music (Stick Rules), update-interval=43200, enabled=false
 https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/CMedia.list, tag=CMedia (Stick Rules), update-interval=43200, enabled=true
-https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Optional/Netflix.list, tag=Netflix (Stick Rules), update-interval=43200, enabled=false
+https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Optional/Apple%20Music.list, tag=Apple Music (Stick Rules), update-interval=43200, enabled=false
 https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Optional/Disney%20Plus.list, tag=Disney+ (Stick Rules), update-interval=43200, enabled=false
+https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Optional/Netflix.list, tag=Netflix (Stick Rules), update-interval=43200, enabled=false
 https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Optional/Spotify.list, tag=Spotify (Stick Rules), update-interval=43200, enabled=false
 https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Optional/YouTube.list, tag=YouTube (Stick Rules), update-interval=43200, enabled=false
 https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/GMedia.list, tag=GMedia (Stick Rules), update-interval=43200, enabled=true
@@ -88,8 +89,8 @@ https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Optiona
 https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Speedtest.list, tag=Speedtest (Stick Rules), update-interval=43200, enabled=true
 https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Outside.list, tag=Outside (Stick Rules), update-interval=43200, enabled=true
 https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Mainland.list, tag=Mainland (Stick Rules), update-interval=43200, enabled=true
+https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Mainland%20ASN.list, tag=Mainland ASN (Stick Rules), update-interval=43200, enabled=true
 https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/LAN.list, tag=LAN (Stick Rules), update-interval=43200, enabled=true
-https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Optional/Apple%20music.list,tag=Apple Music (Stick Rules), update-interval=43200, enabled=true
 
 [rewrite_remote]
 # 默认未启用 TikTok 解锁订阅，如需使用请跳转到 https://github.com/Semporia/TikTok-Unlock/blob/master/README.md 查看详细使用说明
