--- a/QuantumultX/Sample/DlerCloud/Head.conf
+++ b/QuantumultX/Sample/DlerCloud/Head.conf
@@ -1,17 +1,18 @@
 [general]
 excluded_routes = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, 17.0.0.0/8
 
-network_check_url = http://www.gstatic.com/generate_204
-server_check_url = http://www.gstatic.cn/generate_204
+network_check_url = http://cp.cloudflare.com/generate_204
+server_check_url = http://cp.cloudflare.com/generate_204
 server_check_timeout = 3000
 
 geo_location_checker = http://ip-api.com/json/?lang=zh-CN, https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/IP_API.js
 
 [dns]
+prefer-doh3
 server = 119.29.29.29
-server = 119.28.28.28
-server = 1.2.4.8
-server = 182.254.116.116
+server = 223.5.5.5
+server = 223.6.6.6
+doh-server = https://223.5.5.5/dns-query, https://223.6.6.6/dns-query
 
 [policy]
 # 其中 CMedia 策略组为中国媒体，GMedia 为国际媒体，Outside 为境外链接，Mainland 为大陆链接，Others 为最终规则
