--- a/Loon/Loon.conf
+++ b/Loon/Loon.conf
@@ -1,5 +1,5 @@
 # 适用于 Loon 2.2.0 + 版本的配置文件
-# 2022年08月30日 22:00 UTC/GMT +8
+# 2022年08月31日 13:30 UTC/GMT +8
 
 [General]
 # IPv6 支持
@@ -130,6 +130,7 @@ https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Me
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/ABC.list, policy=国际媒体, tag=ABC, enabled=true
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/Abema%20TV.list, policy=国际媒体, tag=Abema TV, enabled=true
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/Amazon.list, policy=国际媒体, tag=Amazon, enabled=true
+https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/Apple%20Music.list, policy=国际媒体, tag=Apple Music, enabled=true
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/Apple%20News.list, policy=国际媒体, tag=Apple News, enabled=true
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/Apple%20TV.list, policy=国际媒体, tag=Apple TV, enabled=true
 https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Media/Bahamut.list, policy=国际媒体, tag=Bahamut, enabled=true
