--- a/QuantumultX/QuantumultX.conf
+++ b/QuantumultX/QuantumultX.conf
@@ -1,6 +1,6 @@
 # 该文件基于 Quantumult X 1.0.32 正式版制作
 #
-# 2022年08月30日 22:00 UTC/GMT +8
+# 2022年08月31日 13:30 UTC/GMT +8
 #
 # Quantumult 使用 HTTP HEAD 方法对测试网址 server_check_url 进行网页响应性测试（测试结果为通过该节点访问此网页获得 HTTP 响应所需要的时间），来确认节点的可用性
 # Quantumult 界面中的延迟测试方式均为网页响应性测试，显示的最终延迟均为通过对应节点访问测试网页获得 HTTP 响应所需要时间
@@ -8,7 +8,7 @@
 
 [general]
 # 网络测试链接
-network_check_url = http://bing.com
+network_check_url = http://www.bing.com
 # 服务器测试链接
 server_check_url = http://www.gstatic.com/generate_204
 # 服务器测试超时时间 (毫秒)
@@ -95,7 +95,7 @@ https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/LAN.lis
 [rewrite_remote]
 # 默认未启用 TikTok 解锁订阅，如需使用请跳转到 https://github.com/Semporia/TikTok-Unlock/blob/master/README.md 查看详细使用说明
 # 如想更换 TikTok 区域，直接修改下方订阅中 -KR 为 -JP/-TW/-US 即可
-https://raw.githubusercontent.com/Semporia/TikTok-Unlock/master/Quantumult%20X/TikTok-KR.conf, tag=TikTok (Semporia), update-interval=43200, enabled=false
+https://raw.githubusercontent.com/Semporia/TikTok-Unlock/master/Quantumult-X/TikTok-KR.conf, tag=TikTok (Semporia), update-interval=43200, enabled=false
 https://raw.githubusercontent.com/app2smile/rules/master/module/bilibili-qx.conf, tag=Bilibili Adblock (app2smile), update-interval=43200, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/zhihu/zhihu_lite.qxrewrite, tag=Zhihu Adblock (blackmatrix7), update-interval=43200, enabled=true
 https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/TestFlightDownload.conf, tag=TFDownload (NobyDa), update-interval=43200, enabled=true
